# kano

./: package-lock.json  package.json
docker/mysql/: docker-compose.yaml
kano-ai/: README.md  pyproject.toml
kano-ai/src/kano_ai/: main.py
kano-js-share/: README.md  index.ts  package.json  tsconfig.json
kano-rn/: README.md  app.json  package-lock.json  package.json
kano-rn/app/: _layout.tsx
kano-rn/app/(tabs)/: _layout.tsx  chat.tsx  index.tsx
kano-rn/components/: ConversationListItem.tsx
kano-rn/network/: websocket.ts
kano-rn/store/: global.tsx
kano-rn/utils/: index.ts
kano-ws/: Cargo.toml
kano-ws-js/: README.md  drizzle.config.ts  index.ts  package.json  run.sh
kano-ws-js/drizzle/: 0000_glamorous_garia.sql  0000_superb_killer_shrike.sql  0001_dapper_echo.sql  0001_whole_maximus.sql  0002_complex_zaran.sql  0002_nasty_shadowcat.sql  0004_warm_talkback.sql  0005_grey_mulholland_black.sql  0006_far_white_queen.sql
kano-ws-js/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
kano-ws-js/sql/: db.sql
kano-ws-js/src/: index.ts
kano-ws-js/src/db/: schema.ts
kano-ws-js/src/repository/: messages.ts
kano-ws-js/src/utils/: json.ts
kano-ws/examples/: client.rs
kano-ws/src/: client.rs  main.rs  tracing.rs
