[project]
name = "kano-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "alibreo3754",email = "starpro123@naver.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "kano_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
