[project]
name = "kano-ai"
version = "0.1.0"
description = ""
authors = [{ name = "alibreo3754", email = "starpro123@naver.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "transformers (>=4.48.3,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "kano_ai", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "kano_ai.main:main"
app = "poetry run uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
